5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1764_1189.log
== SUBMITION (2019-05-30 00:26:28) 
-- CODE:
frase = input("Escreva uma frase: ")
fraseNova = ""
for chr in frase:
    if chr != " ":
        fraseNova += chr.upper()
print(fraseNova)
-- EXECUTION TIME:
0.137905
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:26:34) 
-- CODE:
frase = input("Escreva uma frase: ")
fraseNova = ""
for chr in frase:
    if chr != " ":
      fraseNova += chr.upper()
print(fraseNova)
-- EXECUTION TIME:
0.144638
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:26:35) 
-- CODE:
frase = input("Escreva uma frase: ")
fraseNova = ""
for chr in frase:
    if chr != " ":
      fraseNova += chr.upper()
print(fraseNova)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:27:49) 
-- CODE:
frase = input("Escreva uma frase: ")
fraseNova = ""

print(fraseNova)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:30:06) 
-- CODE:
frase  = raw_input('Digite uma frase : ')

numero_de_letras = len(frase)


normal = frase[0:numero_de_letras]

inverso = frase[numero_de_letras::-1]

if normal == inverso :
    print ('1')
else:
    print ('0')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    frase  = raw_input()
NameError: name 'raw_input' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:30:26) 
-- CODE:
frase = input('Digite uma frase : ')

numero_de_letras = len(frase)


normal = frase[0:numero_de_letras]

inverso = frase[numero_de_letras::-1]

if normal == inverso :
    print ('1')
else:
    print ('0')
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:30:48) 
-- CODE:
frase = input('Digite uma frase : ')

numero_de_letras = len(frase)


normal = frase[0:numero_de_letras]

inverso = frase[numero_de_letras:-1]

if normal == inverso :
    print ('1')
else:
    print ('0')
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:31:11) 
-- CODE:
frase = input('Digite uma frase : ')

numero_de_letras = len(frase)


normal = frase[0:numero_de_letras]

inverso = frase[numero_de_letras:-1]

if normal == inverso :
    print ('1')
else:
    print ('0')
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:39:40) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","").upper()

numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal==inverso):
	s=1
else:
	s=0
print()
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:39:51) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","").upper()

numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:40:01) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","").upper()

numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
-- EXECUTION TIME:
0.134526
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
0
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:40:06) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","").upper()

numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal!=inverso):
	s=1
else:
	s=0
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:40:11) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","").upper()

numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal!=inverso):
	s=1
else:
	s=0
print(s)
-- EXECUTION TIME:
0.175293
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
1
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:40:16) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","").upper()

numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal!=inverso):
	s=1
else:
	s=0
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:41:03) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())
numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal!=inverso):
	s=1
else:
	s=0
print(s)
-- EXECUTION TIME:
0.142106
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
1
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:41:05) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())
numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal!=inverso):
	s=1
else:
	s=0
print(s)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:41:19) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())
numero_de_letras = len(frase)
normal = frasenova[0:numero_de_letras]
inverso = frasenova[numero_de_letras:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:41:43) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())

normal = frasenova[0:]
inverso = frasenova[:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:42:36) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())

normal = frasenova[0:]
inverso = frasenova[:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
ACARARAJADADAJARARAC
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:42:55) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())

normal = frasenova[0:]
inverso = frasenova[-1:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:43:06) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())

normal = frasenova[0:]
inverso = frasenova[:0]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:43:35) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())

normal = frasenova[0]
inverso = frasenova[-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
1
A
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:43:49) 
-- CODE:
frase = input("Escreva uma frase: ")
frasenova=frase.replace(" ","")
print(frasenova.upper())

normal = frasenova[0:]
inverso = frasenova[:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
ACARARAJADADAJARARAC
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:44:02) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())

normal = frasenova[0:]
inverso = frasenova[:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
ACARARAJADADAJARARAC
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:44:56) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)
normal = frasenova[0:n]
inverso = frasenova[n:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:45:14) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)
normal = frasenova[n:]
inverso = frasenova[:-n]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:45:54) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-1]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARAC
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:46:05) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- ERROR:
File "XXXX", line 6
    normal = frasenova[:-]
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:46:19) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-10]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADA
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:46:23) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-10]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADA
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:46:31) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-0]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0

ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:46:45) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-n]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0

ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:46:50) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-n]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- EXECUTION TIME:
0.176869
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
0

ACARARAJADADAJARARACA
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0

CACHORRO
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
0

amalanadanalama
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:46:54) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-1]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- EXECUTION TIME:
0.18267
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARAC
ACARARAJADADAJARARACA
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
CACHORR
CACHORRO
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
0
amalanadanalam
amalanadanalama
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:46:56) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[:-1]
inverso = frasenova[0:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- EXECUTION TIME:
0.18634
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARAC
ACARARAJADADAJARARACA
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
CACHORR
CACHORRO
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
0
amalanadanalam
amalanadanalama
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:47:09) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[0:]
inverso = frasenova[:-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
ACARARAJADADAJARARAC
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:48:58) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[0:]
inverso = frasenova[:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- OUTPUT:
ACARARAJADADAJARARACA
1
ACARARAJADADAJARARACA
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:49:04) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())
n=len(frasenova)

normal = frasenova[0:]
inverso = frasenova[:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)
print(normal)
print(inverso)
-- EXECUTION TIME:
0.172449
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
ACARARAJADADAJARARACA
ACARARAJADADAJARARACA
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
1
CACHORRO
CACHORRO
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
amalanadanalama
amalanadanalama
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:49:11) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())


normal = frasenova[0:]
inverso = frasenova[:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)

-- EXECUTION TIME:
0.144875
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
1
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:50:15) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())


normal = frasenova[0:]
inverso = frasenova[-1:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)

-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:50:30) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())


normal = frasenova[0:]
inverso = frasenova[:1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)

-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:50:38) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())


normal = frasenova[0:]
inverso = frasenova[:]

if(normal==inverso):
	s=1
else:
	s=0
print(s)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:51:16) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())


normal = frasenova[0:]
inverso = frasenova[::-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:51:21) 
-- CODE:
frase = input("Escreva uma frase:")
frasenova=frase.replace(" ","")
print(frasenova.upper())


normal = frasenova[0:]
inverso = frasenova[::-1]

if(normal==inverso):
	s=1
else:
	s=0
print(s)

-- EXECUTION TIME:
0.140393
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
